--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "rc-progress": "^3.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.3.0",
